# ComfyUI_MiniCPM-V-2_6-int4

./: README.md  __init__.py  display_text_nodes.py  image_nodes.py  nodes.py  nodes_chat.py  nodes_legacy.py  nodes_polished.py  pyproject.toml  requirements.txt  util_nodes.py
examples/: ChatGpt-like_workflow.json  Chat_with_multiple_images_workflow.json  Chat_with_multiple_images_workflow_legacy.json  Chat_with_multiple_images_workflow_polished.json  Chat_with_single_image_workflow.json  Chat_with_single_image_workflow_legacy.json  Chat_with_single_image_workflow_polished.json  Chat_with_text_workflow.json  Chat_with_text_workflow_legacy.json  Chat_with_text_workflow_polished.json  Chat_with_video_workflow.json  Chat_with_video_workflow_legacy.json  Chat_with_video_workflow_polished.json  workflow.json
web/js/: displayText.js  multipleImagesInput.js  nodesChat.js  previewVideo.js  uploadVideo.js
